force-app/main/default/objects/DuplicateCluster__c/DuplicateCluster__c.object-meta.xml
<CustomObject>
    <description>Stores a cluster of duplicate records identified by the batch detection process.</description>
    <label>Duplicate Cluster</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Cluster Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Clusters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>