force-app/main/default/objects/DuplicateCluster__c/fields/BlockingKey__c.field-meta.xml
<CustomField>
    <fullName>BlockingKey__c</fullName>
    <label>Blocking Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>