force-app/main/default/objects/DuplicateCluster__c/fields/ClusterScore__c.field-meta.xml
<CustomField>
    <fullName>ClusterScore__c</fullName>
    <label>Cluster Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>