force-app/main/default/objects/DuplicateCluster__c/fields/DetectedDate__c.field-meta.xml
<CustomField>
    <fullName>DetectedDate__c</fullName>
    <label>Detected Date</label>
    <type>DateTime</type>
</CustomField>