force-app/main/default/objects/DuplicateCluster__c/fields/RecordCount__c.field-meta.xml
<CustomField>
    <fullName>RecordCount__c</fullName>
    <label>Record Count</label>
    <summarizedField></summarizedField>
    <summaryForeignKey>DuplicateClusterMember__c.Cluster__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>